Fixed skill icons on mobile.

--- a/styles.css
+++ b/styles.css
@@ -152,18 +152,13 @@ button {
   animation-duration: 3s;
 }
 
-/* #preloader{
-  background-color: #ECECEC;
-  background-image: url('/media/images/loading_logo.png');
-  background-repeat: no-repeat;
-  background-position: center;
-  height: 100vh;
-  width: 100%;
-  position: fixed;
-  z-index: 100;
-} */
 @media screen and (max-width: 768px) {
   .educational-card {
     margin-bottom: 10px;
+  }
+
+  .skill-icon {
+    height: 50px;
+    width: 50px;
   }
 }
